force-app/main/default/objects/E_MOC_Temporary_History__c.object
<CustomObject>
    <fields>
        <fullName>Action_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>E_MOC_Temporary_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_by_text__c</fullName>
        <formula>Action_by__r.FirstName &amp;&quot; &quot;&amp;  Action_by__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action by text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application_No__c</fullName>
        <formula>E_MOC_Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E-MOC Application No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipName>E_MOC_Temporary_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_require_end_date__c</fullName>
        <label>New require end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_require_end_date__c</fullName>
        <label>Old require end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Correct the problem by using existing solution</fullName>
                </value>
                <value>
                    <fullName>Extend FN</fullName>
                </value>
                <value>
                    <fullName>Require to extend to prevent overdue during return to normal</fullName>
                </value>
                <value>
                    <fullName>Require to extend in this temporary MOC?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <label>E-MOC Temporary Extension History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Yes__c</columns>
        <columns>No__c</columns>
        <columns>Old_require_end_date__c</columns>
        <columns>New_require_end_date__c</columns>
        <columns>Action_by__c</columns>
        <columns>Remark__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>THN-{0000000}</displayFormat>
        <label>E-MOC Temporary History No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>